# roboblog

./: .gitignore  .gitmodules  .travis.yml  Makefile  Readme.md  appveyor.yml  base.html  custom_filters.py  fabfile.py  index.html  pelicanconf.py  post.html  publishconf.py  pyproject.toml  requirements.txt  tasks.py
content/: 2014-11-13-the-blog-is-dead-long-live-the-blog.md  2014-11-22-shouting-in-the-forest-and-twitter.md  2015-12-22-book-review-code-simplicity.md  2016-01-06-getting-the-terminal-program-in-fish.md  2016-02-29-Javascript-is-the-English-language-of-web-development.md  2016-05-04-Compilers-and-the-modern-art-of-web-development.md  2016-09-07-Metabuilders-and-CMake.md  2016-09-07-metabuilders-and-cmake.md  2016-09-07-the-simplest-cmake-possible.md  2016-09-12-cmake-and-variables.md  2016-10-05-cmake-and-out-of-source-build.md  2017-03-24-libraries-and-cmake-part-1.md  2017-04-01-cmake-and-libraries-part-1.5-windows.md  2017-05-12-cmake-and-libraries-part-2-third-party-libraries.md  2017-11-25-docker-build-and-proxies.md  2017-11-28-python-object-operations-and-vectors.md  2018-02-07-ocaml-and-sequences-from-scratch-part-1.md  2018-02-07-ocaml-and-sequences-from-scratch.md  2018-02-08-ocaml-and-sequences-from-scratch-part-2.md  2018-02-10-ocaml-and-sequences-from-scratch-comment-of-part-2.md  2018-02-10-ocaml-and-sequences-from-scratch-part-3.md  2018-02-12-ocaml-and-sequences-from-scratch-part-3.md  2018-02-13-ocaml-and-sequences-from-scratch-part-3.md  2018-09-13-gradle-kotlin-and-antlr4.md  2019-04-20-steganography-python-and-pillow.md  (+41 more)
css/: site.css
(+26 files in other folders)
