[tool.poetry]
name = "roboblog"
version = "0.1.0"
description = ""
authors = ["Cristian Prieto <me@cprieto.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.5.4"
Markdown = "^3.3.3"
pelican-jsmath = "^0.1.0"
pelican-neighbors = "^1.1.0"
pelican-readtime = "^0.2.0"
typogrify = "^2.0.7"
ghp-import = "^1.0.1"
invoke = "^1.5.0"
livereload = "^2.6.3"
markdown-headdown = "^0.1.3"
markdown-notebook = "^1.0"
pelican-extended-sitemap = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
